[gd_scene load_steps=5 format=3 uid="uid://djbih75t07hom"]

[ext_resource type="Script" path="res://game/entities/player/gun/gun.gd" id="1_pbm0h"]
[ext_resource type="Texture2D" uid="uid://dctj64ka0u1sq" path="res://game/items/guns/gun.png" id="2_2usvc"]
[ext_resource type="Script" path="res://addons/godot_sfxr/SfxrStreamPlayer2D.gd" id="3_ag7bc"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_pjr1i"]
data = PackedByteArray(205, 205, 205, 205, 219, 219, 219, 219, 235, 237, 237, 237, 11, 21, 21, 21, 218, 183, 183, 183, 233, 27, 27, 27, 23, 15, 15, 15, 19, 47, 47, 47, 47, 247, 240, 240, 240, 18, 39, 39, 39, 37, 33, 33, 33, 33, 62, 62, 62, 62, 241, 196, 196, 196, 206, 235, 235, 235, 235, 197, 192, 192, 192, 192, 191, 191, 191, 191, 196, 196, 196, 196, 255, 60, 60, 60, 60, 8, 1, 1, 1, 244, 225, 225, 225, 225, 22, 30, 30, 30, 8, 198, 198, 198, 198, 20, 66, 66, 66, 66, 250, 240, 240, 240, 246, 7, 7, 7, 7, 237, 196, 196, 196, 196, 191, 188, 188, 188, 188, 247, 12, 12, 12, 12, 9, 9, 9, 9, 2, 213, 213, 213, 213, 218, 233, 233, 233, 233, 229, 216, 216, 216, 216, 213, 205, 205, 205, 205, 214, 219, 219, 219, 222, 237, 237, 237, 237, 6, 21, 21, 21, 21, 183, 183, 183, 183, 220, 28, 28, 28, 28, 21, 18, 18, 18, 18, 47, 47, 47, 47, 31, 240, 240, 240, 240, 12, 39, 39, 39, 39, 35, 34, 34, 34, 34, 59, 62, 62, 62, 62, 196, 196, 196, 196, 201, 235, 235, 235, 235, 230, 192, 192, 192, 192, 192, 191, 191, 191, 191, 192, 196, 196, 196, 196, 211, 60, 60, 60, 60, 60, 1, 1, 1, 1, 1, 229, 225, 225, 225, 225, 15, 30, 30, 30, 30, 241, 198, 198, 198, 198, 229, 66, 66, 66, 66, 56, 241, 241, 241, 241, 241, 254, 7, 7, 7, 7, 237, 196, 196, 196, 196, 196, 189, 188, 188, 188, 188, 228, 12, 12, 12, 12, 12, 9, 9, 9, 9, 9, 245, 214, 214, 214, 214, 214, 228, 233, 233, 233, 233, 231, 216, 216, 216, 216, 216, 210, 205, 205, 205, 205, 210, 219, 219, 219, 219, 224, 237, 237, 237, 237, 242, 21, 21, 21, 21, 21, 250, 247, 247, 247, 247, 14, 28, 28, 28, 28, 24, 18, 18, 18, 18, 22, 47, 47, 47, 47, 47, 255, 240, 240, 240, 240, 5, 39, 39, 39, 39, 39, 34, 34, 34, 34, 34, 44, 62, 62, 62, 62, 62, 211, 196, 196, 196, 196, 211, 235, 235, 235, 235, 235, 208, 192, 192, 192, 192, 192, 191, 191, 191, 191, 191, 193, 197, 197, 197, 197, 197, 1, 60, 60, 60, 60, 60, 16, 1, 1, 1, 1, 1, 229, 226, 226, 226, 226, 226, 22, 30, 30, 30, 30, 30, 198, 198, 198, 198, 198, 198, 51, 66, 66, 66, 66, 66, 251, 241, 241, 241, 241, 241, 254, 7, 7, 7, 7, 7, 229, 196, 196, 196, 196, 196, 194, 188, 188, 188, 188, 188, 188, 3, 13, 12, 12, 12, 12, 11, 9, 9, 9, 9, 9, 3, 214, 214, 214, 214, 214, 214, 224, 234, 234, 234, 234, 234, 232, 217, 217, 217, 217, 217, 217, 211, 206, 206, 206, 206, 206, 215, 220, 221, 221, 221, 221, 233, 238, 238, 238, 238, 238, 16, 20, 20, 20, 20, 20, 41, 44, 44, 44, 44, 44, 29, 27, 27, 27, 27, 27, 19, 17, 17, 17, 17, 17, 38, 45, 45, 45, 45, 45, 15, 241, 241, 241, 241, 241, 254, 37, 37, 37, 37, 37, 37, 32, 32, 32, 32, 32, 32, 49, 59, 59, 59, 59, 59, 30, 200, 200, 200, 200, 200, 200, 228, 237, 237, 237, 237, 237, 227, 197, 197, 197, 197, 197, 197, 196, 196, 196, 196, 196, 196, 196, 201, 201, 201, 201, 201, 201, 229, 55, 55, 55, 55, 55, 55, 28, 1, 1, 1, 1, 1, 1, 239, 228, 228, 228, 228, 228, 228, 7, 27, 27, 27, 27, 27, 27, 233, 203, 203, 203, 203, 203, 203, 4, 60, 60, 60, 60, 60, 60, 33, 242, 242, 242, 242, 242, 242, 245, 7, 7, 7, 7, 7, 7, 7, 217, 203, 203, 203, 203, 203, 203, 200, 195, 195, 195, 196, 196, 196, 196, 249, 11, 11, 11, 11, 11, 11, 10, 8, 8, 8, 8, 8, 8, 8, 241, 219, 219, 219, 219, 219, 219, 219, 232, 236, 236, 236, 236, 236, 236, 236, 225, 221, 221, 221, 221, 221, 221, 221, 213, 212, 212, 212, 212, 212, 212, 47, 47, 47, 47, 47, 47, 39, 240, 240, 240, 240, 240, 240, 248, 18, 18, 18, 18, 18, 18, 23, 39, 39, 39, 39, 39, 39, 37, 24, 24, 24, 24, 24, 24, 24, 16, 15, 15, 15, 15, 15, 15, 34, 40, 40, 40, 40, 40, 40, 20, 243, 243, 243, 243, 243, 243, 243, 33, 33, 33, 33, 33, 32, 32, 30, 28, 28, 28, 28, 28, 28, 28, 52, 52, 51, 51, 51, 51, 51, 14, 207, 207, 207, 207, 207, 207, 207, 227, 239, 239, 239, 239, 239, 239, 239, 213, 204, 204, 204, 204, 205, 205, 205, 204, 204, 204, 204, 204, 204, 204, 204, 208, 208, 208, 208, 209, 209, 209, 209, 25, 48, 48, 48, 48, 48, 48, 48, 24, 1, 1, 1, 1, 1, 1, 1, 250, 232, 232, 232, 232, 232, 232, 232, 232, 12, 24, 24, 24, 24, 24, 24, 24, 7, 211, 211, 211, 211, 211, 211, 211, 211, 4, 52, 52, 52, 52, 52, 52, 52, 52, 5, 244, 244, 244, 244, 244, 244, 244, 244, 4, 6, 6, 6, 6, 6, 6, 6, 6, 223, 210, 210, 210, 210, 210, 211, 211, 211, 207, 204, 204, 204, 205, 205, 205, 205, 205, 235, 10, 10, 10, 10, 10, 10, 10, 10, 9, 7, 7, 7, 7, 7, 7, 7, 7, 7, 243, 225, 225, 225, 225, 225, 225, 225, 225, 225, 236, 239, 239, 239, 239, 239, 239, 239, 239, 240, 228, 227, 227, 227, 227, 227, 227, 227, 227, 227, 220, 219, 219, 219, 219, 219, 219, 219, 5, 29, 29, 29, 29, 29, 29, 29, 18, 243, 243, 243, 243, 243, 243, 243, 243, 8, 15, 15, 15, 15, 15, 15, 15, 20, 33, 33, 33, 33, 32, 32, 32, 32, 25, 20, 20, 20, 20, 20, 20, 20, 20, 14, 13, 13, 13, 13, 13, 13, 13, 13, 31, 33, 33, 33, 33, 33, 33, 33, 33, 245, 245, 245, 245, 245, 245, 245, 245, 245, 18, 27, 27, 27, 27, 27, 27, 27, 27, 25, 23, 23, 23, 23, 23, 23, 23, 23, 28, 43, 42, 42, 42, 42, 42, 42, 42, 42, 236, 216, 216, 216, 216, 216, 216, 216, 216, 219, 242, 242, 242, 242, 242, 242, 242, 242, 242, 235, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 213, 213, 213, 213, 213, 214, 214, 214, 214, 215, 217, 217, 217, 217, 218, 218, 218, 218, 218, 218, 30, 39, 39, 39, 39, 39, 39, 39, 39, 39, 20, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 239, 237, 237, 237, 237, 237, 237, 237, 237, 237, 246, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 5, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 230, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 41, 4, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 250, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 245, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 220, 219, 216, 216, 216, 216, 216, 216, 216, 216, 216, 216, 216, 222, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 2, 235, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 240, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 238, 234, 234, 234, 234, 234, 234, 234, 234, 234, 234, 234, 234, 233, 228, 228, 228, 228, 228, 228, 228, 228, 228, 228, 253, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 250, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 25, 25, 25, 24, 24, 24, 24, 24, 24, 24, 24, 17, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 13, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 241, 237, 237, 237, 237, 237, 237, 237, 237, 237, 237, 239, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 18, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 22, 31, 31, 31, 31, 31, 31, 31, 31, 31, 30, 30, 30, 249, 227, 227, 227, 227, 227, 227, 227, 227, 228, 228, 228, 228, 239, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 236, 226, 226, 226, 226, 226, 226, 227, 227, 227, 227, 227, 227, 227, 226, 226, 226, 226, 226, 226, 226, 226, 226, 226, 226, 227, 227, 227, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 230, 230, 230, 236, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 11, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 245, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 7, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 254, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 2, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 19, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 254, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 252, 233, 233, 233, 233, 233, 233, 233, 233, 234, 234, 234, 234, 234, 234, 234, 234, 234, 232, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 239, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 248, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 242, 245, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 246, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 242, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 6, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 2, 250, 250, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 250, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 253, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 9, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 7, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 2, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 250, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 5, 10, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 14, 14, 14, 14, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 4, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 251, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 1, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 8, 8, 8, 8, 8, 6, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 253, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 255, 4, 4, 4, 4, 4, 4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 254, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 255, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4, 2, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 255, 255, 254, 254, 254, 254, 254, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 1)

[node name="Gun" type="Node2D"]
script = ExtResource("1_pbm0h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 46.0
offset_top = -27.0
offset_right = 108.0
offset_bottom = 35.0
texture = ExtResource("2_2usvc")

[node name="Output" type="Node2D" parent="."]
position = Vector2(100, 0)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SfxrStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamWAV_pjr1i")
volume_db = -10.0
pitch_scale = 0.5
script = ExtResource("3_ag7bc")
wave/type = 3
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.0670717
envelope/punch_time = 0.0
envelope/decay_time = 0.138087
frequency/start_frequency = 0.308943
frequency/min_freq_cutoff = 0.0
frequency/slide = -0.417227
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timeout"]
